package com.github.mayconr.juoserver.game.model;

public enum RegionType {
    PROVINCE,
    CITY,
    DISTRICT,
    BUILDING,
    DUNGEON,
    DUNGEON_LEVEL
}
